<resources>
    <string name="app_name">Nezafoodaj</string>
    <string name="activityName_AddRecipe">Tvorba Receptu</string>
    <string name="activityName_RecipeDetail">Recept</string>
    <string name="activityName_UserSettings">Nastavenia</string>

    <string name="add">+</string>
    <string name="remove">-</string>

    <string name="homeFragment">Už nikdy nezabúdaj na recepty.</string>
    <string name="searchFragment">Here you can search through recipes.</string>
    <string name="myRecipesFragment">Here you can see your recipes.</string>
    <string name="profileFragment">Here you can see your profile.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- USER SETTINGS ACTIVITY -->
    <string name="userSettings_textView_name">Meno</string>
    <string name="userSettings_textView_age">Vek</string>
    <string name="userSettings_textView_gender">Pohlavie</string>
    <string name="rb_gender_male">Muž</string>
    <string name="rb_gender_female">Žena</string>
    <!--  DETAIL RECIPE ACTIVITY -->
    <string name="recipe_menu_bookmark">Obľúbiť</string>
    <string name="recipe_menu_bookmarked">Obľúbené</string>
    <string name="recipe_menu_addNote">Pridať poznámku</string>
    <string name="recipe_menu_addedNote">Zobraziť poznámku</string>
    <string name="recipe_noteDialog_addNoteHint">Zadaj poznámku...</string>
    <string name="detail_recipeName">[RECIPE NAME]</string>
    <string name="detail_PrepTime">Čas prípravy</string>
    <string name="detail_Ingredients">Ingrediencie</string>
    <string name="detail_Steps">Postup</string>
    <string name="detail_rateBtn_text">Hodnotiť</string>

    <!-- ADD RECIPE ACTIVITY -->
    <string name="add_recipeName">Názov receptu</string>
    <string name="add_recipeName_hint">Zadaj názov receptu</string>

    <string name="add_description">Popis receptu</string>
    <string name="add_description_hint">Zadaj popis receptu</string>

    <string name="add_prepTime">Čas prípravy</string>
    <string name="add_prepTime_hint">0</string>
    <string name="add_prepTime_text">minút</string>

    <string name="add_Ingredients">Ingrediencie</string>
    <string name="add_Ingredients_btn">Pridať ingredienciu</string>

    <string name="add_Steps">Postup</string>
    <string name="add_Steps_btn">Pridať krok</string>
    <string name="add_step_description_hint">Zadaj popis kroku</string>
    <string name="add_step_imageBtn">Vybrať obrázok kroku</string>

    <string name="add_step_imageContentDescription">Náhľad Obrázka Kroku</string>
    <string name="upload_stepImage_checkmark">Úspešne uploadnuté</string>

    <string name="add_finalImage">Výsledný obrázok</string>
    <string name="add_finalImage_btn">Vybrať obrázok</string>
    <string name="add_finalImage_imageContentDescription">Náhľad vysledného obrázka</string>

    <string name="add_saveRecipe">Uložiť</string>

    <string name="add_REMOVERECIPE">Odstrániť recept</string>

    <!-- MENU -->
    <string name="nav_home">Domov</string>
    <string name="nav_search">Hľadať</string>
    <string name="nav_addRecipe">Pridať Recept</string>
    <string name="nav_myRecipes">Moje Recepty</string>
    <string name="nav_profile">Profil</string>

    <!-- HOME FRAGMENT -->
    <string name="chip_timePeriod_week">Týždeň</string>
    <string name="chip_timePeriod_month">Mesiac</string>
    <string name="chip_timePeriod_year">Rok</string>
    <string name="chip_timePeriod_all">Celý čas</string>
    <string name="homefragment_textView_latest">Najnovšie recepty</string>
    <string name="homefragment_textView_best">Najlepšie recepty</string>
    <string name="homeFragment_miniText">Vitaj na domovskej stránke aplikácie Nezafoodaj.
    Nechaj sa inšpirovať vybranými receptami.</string>
    <string name="homeFragment_noRecipes">Zatiaľ neexistujú žiadne recepty.</string>

    <!-- MY RECIPES FRAGMENT -->
    <string name="myRecipes_noRecipesResult">Nemáte ešte žiadne vytvorené recepty.</string>
    <string name="myRecipes_noFavRecipesResult">Nemáte žiadne obľúbené recepty.</string>

    <!-- RECIPE LIST -->
    <string name="recipeList_finalImage_conDesc">Náhľad vysledného obrázka receptu</string>"
</resources>