<!-- res/menu/menu_recipe_detail.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_note"
        android:icon="@drawable/note_add"
        android:title="@string/recipe_menu_addNote"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/bookmark_add"
        android:title="@string/recipe_menu_bookmark"
        app:showAsAction="always"
        android:visible="false"
        />
    <item
        android:id="@+id/action_bookmarkRemove"
        android:icon="@drawable/bookmark_added"
        android:title="@string/recipe_menu_bookmarked"
        app:showAsAction="always"
        android:visible="false"
        />
</menu>