<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/step_row.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginBottom="12dp"
    android:background="@drawable/step_background"
    android:elevation="10dp"
    android:padding="12dp"
    >

    <Button
        android:id="@+id/btnRemoveStep"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:textSize="20sp"
        android:text="@string/remove"
        android:layout_gravity="end"/>
    <EditText
        android:id="@+id/editStepDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_step_description_hint"
        android:background="@drawable/addrecipe_inputfield_background"
        />


    <ImageView
        android:id="@+id/imageStepPreview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/add_step_imageContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="4dp">

        <Button
            android:id="@+id/btnSelectStepImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_step_imageBtn" />

        <ImageView
            android:id="@+id/imageUploadCheckmark"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/upload_stepImage_checkmark"
            app:tint="@color/straw"
            android:src="@drawable/baseline_check"
            android:layout_marginStart="12dp"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>

