<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:title="@string/activityName_AddRecipe"
        android:titleTextColor="@android:color/white" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:layout_marginTop="50dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <!-- Profile Photo -->
            <ImageView
                android:id="@+id/iv_profilePhoto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/account_circle_150dp"
                android:background="@drawable/profile_photo_background"
                android:contentDescription="Profile Image"
                android:layout_marginBottom="16dp"
                android:scaleType="fitCenter" />
            <ProgressBar
                android:id="@+id/progressBarUpload"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="5dp"
                android:visibility="gone"
                android:progressTint="@color/straw"
                android:max="100" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Klikni na obrázok pre zmenu"
                android:textSize="12sp"
                android:textColor="@android:color/darker_gray"
                android:layout_marginBottom="24dp"/>

            <!-- Name -->
            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Meno"
                android:inputType="textPersonName"
                android:maxLines="1" />

            <!-- Age -->
            <EditText
                android:id="@+id/et_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Vek"
                android:inputType="number"
                android:maxLines="1"
                android:layout_marginTop="16dp" />

            <!-- Gender -->
            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="16dp">

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:buttonTint="@color/man_blue"
                    android:text="@string/rb_gender_male" />

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/salmon_pink"
                    android:text="@string/rb_gender_female"
                    android:layout_marginStart="24dp"/>
            </RadioGroup>

            <!-- Save Button -->
            <android.widget.Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Uložiť zmeny"
                android:layout_marginTop="32dp"
                android:background="@drawable/addrecipe_button"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>

